--- a/TotalCrossVM/.gitignore
+++ b/TotalCrossVM/.gitignore
@@ -11,3 +11,4 @@ src/launchers/android/lint.xml
 builders/xcode/totalcross_ios_devkeys
 builders/uedit.GUILHERMECHAZAN.g.pui
 builders/*.pui
+builders/android
