--- a/TotalCrossVM/builders/vc2008/Dolphin.vcproj
+++ b/TotalCrossVM/builders/vc2008/Dolphin.vcproj
@@ -101,9 +101,9 @@
 			/>
 			<DeploymentTool
 				ForceDirty="-1"
-				RemoteDirectory=""
+				RemoteDirectory="\TotalCross"
 				RegisterOutput="0"
-				AdditionalFiles=""
+				AdditionalFiles="$(OutDir)\Dolphin.dll"
 			/>
 			<DebuggerTool
 			/>
