--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -61,7 +61,7 @@
 <property name="source.vm.path"    value="${basedir}/.."/>
 <property name="target.sdk.path"   value="${base.target.path}/TotalCrossSDK"/>
 <property name="target.sdk3.path"  value="${base.target.path}/TotalCross3"/>
-<property name="source.sdk.path"   value="${basedir}/../../TotalCrossSDK"/>
+<property name="source.sdk.path"   value="${basedir}/../../TotalCrossSDK/src/main/java"/>
 <property name="base.temp.path"    value="${basedir}/../../../temp"/>
 <property name="etc"               value="${source.sdk.path}/etc"/>
 <property name="tools"             value="${etc}/tools"/>
